--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
-pandas
-beautifulsoup4
-requests
-openpyxl
-playwright
-streamlit
+# Core dependencies
+pandas>=2.0.0
+beautifulsoup4>=4.12.0
+requests>=2.31.0
+openpyxl>=3.1.0
+streamlit>=1.28.0
+
+# Web scraping and automation
+playwright>=1.40.0
+
+# Optional: OpenAI integration (if needed)
+openai>=1.0.0
+
+# Development dependencies (optional)
+pytest>=7.0.0
+black>=23.0.0
+flake8>=6.0.0
+mypy>=1.0.0
