--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,15 @@ beautifulsoup4>=4.12.0
 requests>=2.31.0
 openpyxl>=3.1.0
 streamlit>=1.28.0
+python-dotenv>=1.0.0
 
 # Web scraping and automation
 playwright>=1.40.0
+
+# PDF processing and OCR
+PyMuPDF>=1.23.0
+pytesseract>=0.3.10
+Pillow>=10.0.0
 
 # Optional: OpenAI integration (if needed)
 openai>=1.0.0
