--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ playwright>=1.40.0
 PyMuPDF>=1.23.0
 pytesseract>=0.3.10
 Pillow>=10.0.0
+opencv-python>=4.8.0
+numpy>=1.24.0
 
 # Optional: OpenAI integration (if needed)
 openai>=1.0.0
