--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ requests>=2.31.0
 openpyxl>=3.1.0
 streamlit>=1.28.0
 python-dotenv>=1.0.0
+openai>=1.0.0
 
 # Web scraping and automation
 playwright>=1.40.0
@@ -13,8 +14,6 @@ playwright>=1.40.0
 PyMuPDF>=1.23.0
 pytesseract>=0.3.10
 Pillow>=10.0.0
-opencv-python>=4.8.0
-numpy>=1.24.0
 
 # Optional: OpenAI integration (if needed)
 openai>=1.0.0
