--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ requests>=2.31.0
 openpyxl>=3.1.0
 streamlit>=1.28.0
 python-dotenv>=1.0.0
-openai>=1.0.0
 
 # Web scraping and automation
 playwright>=1.40.0
@@ -15,11 +14,9 @@ PyMuPDF>=1.23.0
 pytesseract>=0.3.10
 Pillow>=10.0.0
 
-# Optional: OpenAI integration (if needed)
+# AI and ML
 openai>=1.0.0
 
-# Development dependencies (optional)
-pytest>=7.0.0
-black>=23.0.0
-flake8>=6.0.0
-mypy>=1.0.0
+# Additional utilities
+lxml>=4.9.0
+html5lib>=1.1
